--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav > a {
     border-radius: 5px;
     font-family: var(--font-destaque);
     width: auto;
-}
+    }
 
 nav a:hover {
     background-color: var(--cor6);
@@ -162,10 +162,79 @@ article a:hover {
 }
 
 footer {
-    font-family: var(--font-padrão);
+    font-family: var(--font-destaque);
     color: var(--cor7);
     background-color: var(--cor2);
     text-align: center;
     text-decoration: nome;
     font-size: 1em;
+}
+
+.box{
+    border: 1px solid black;
+    color: black;
+    position: relative;
+    top: 0%;
+    left: 0%;
+    transform: translate(-0%,-0%);
+    background-color: white;
+    padding: 15px;
+    border-radius: 15px;
+    width: 96.5%;
+}
+fieldset{
+    border: 1px solid rgba(30, 143, 255, 0);
+    font-family: var(--font-padrão);
+    font-size: 18px;
+}
+legend{
+    border: none;
+    font-family: var(--font-destaque);
+    padding: 10px;
+    text-align: center;
+    background-color: white;
+    border-radius: 1px;
+    font-size: 32px;
+}
+.inputBox{
+    position: relative;
+    
+}
+.inputUser{
+    font-family: var(--font-padrão);
+    background: none;
+    border: none;
+    border-bottom: 1px solid black;
+    outline: none;
+    color: white;
+    width: 96.5%;
+    letter-spacing: 2px;
+}
+.labelInput{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    pointer-events: none;
+    transition: .5s;
+}
+.inputUser:focus ~ .labelInput,
+.inputUser:valid ~ .labelInput{
+    top: -20px;
+    font-size: 12px;
+    color: dodgerblue;
+}
+
+#submit{
+    background-image: linear-gradient(to right,var(--cor2), var(--cor5));
+    font-family: var(--font-destaque);
+    width: 100%;
+    border: none;
+    padding: 15px;
+    color: black;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 10px;
+}
+#submit:hover{
+    background-image: linear-gradient(to right,var(--cor1), var(--cor4));
 }
